# wallapopUpdateWatcher

./: .gitignore  README.md  pyproject.toml  setup.py
.github/workflows/: python-package.yml
tests/: test_producto.py  test_query.py  test_updateWatcher.py
wallapopUpdateWatcher/: __init__.py  producto.py  query.py  strategies.py  updateWatcher.py
