[tool.poetry]
name = "wallapopUpdateWatcher"
version = "0.1.2"
description = "A library to watch for new items at wallapop.es"
authors = ["Adair-GA <adairyves@gmail.com>"]
license = "GNU General Public License v3 (GPLv3)"
repository = "https://github.com/Adair-GA/wallapopUpdateWatcher"
readme = "README.md"
classifiers = [
    'Development Status :: 4 - Beta',
    'Intended Audience :: Developers',
    'Topic :: Software Development',
    'License :: OSI Approved :: GNU General Public License v3 (GPLv3)',
    'Programming Language :: Python :: 3.11',
    
]

[tool.poetry.dependencies]
python = "^3.7"
httpx = "^0.23.3"

[tool.poetry.group.test.dependencies]
pytest-asyncio = "^0.16.0"
pytest-httpx = "^0.21.2"
pytest = "^7.2.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
